--- a/custom_components/wahoo_kickr_core/manifest.json
+++ b/custom_components/wahoo_kickr_core/manifest.json
@@ -1,9 +1,11 @@
 {
   "domain": "wahoo_kickr_core",
   "name": "Wahoo Kickr Core",
-  "version": "0.1.0",
-  "documentation": "https://www.wahoofitness.com",
+  "codeowners": ["@kilianyp"],
   "config_flow": true,
-  "zeroconf": ["_wahoo-fitness-tnp._tcp.local."],
-  "iot_class": "local_push"
+  "documentation": "https://github.com/kilianyp/hacs-wahoo-kickr-core",
+  "iot_class": "local_push",
+  "issue_tracker": "https://github.com/kilianyp/hacs-wahoo-kickr-core/issues",
+  "version": "0.1.0",
+  "zeroconf": ["_wahoo-fitness-tnp._tcp.local."]
 }
