--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,8 +19,9 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-homeassistant-custom-component
+          pip install pytest pytest-homeassistant-custom-component zeroconf
 
       - name: Run tests
-        run: python3 -m pytest -q
+        env:
+          PYTHONPATH: ${{ github.workspace }}
+        run: pytest -q
