--- a/custom_components/wahoo_wftnp/manifest.json
+++ b/custom_components/wahoo_wftnp/manifest.json
@@ -6,6 +6,6 @@
   "documentation": "https://github.com/kilianyp/hacs-wahoo-wftnp",
   "iot_class": "local_push",
   "issue_tracker": "https://github.com/kilianyp/hacs-wahoo-wftnp/issues",
-  "version": "0.1.0",
+  "version": "0.2.0-alpha2",
   "zeroconf": ["_wahoo-fitness-tnp._tcp.local."]
 }
